use same preprocessing pipeline

--- a/RD/encodec.ipynb
+++ b/RD/encodec.ipynb
@@ -36,7 +36,7 @@
     "from IPython.display import Audio\n",
     "from transformers import EncodecModel, AutoProcessor\n",
     "from torchvision.transforms import ToPILImage, PILToTensor\n",
-    "from datasets import load_dataset, Image\n",
+    "from datasets import load_dataset, Image \n",
     "from walloc import walloc\n",
     "from spauq.core.metrics import spauq_eval\n",
     "class Config: pass"
@@ -90,7 +90,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5713ad0d54b94eb9a70c90abe579ad8b",
+       "model_id": "a25afbd2e9944db5b5828a80793bfd69",
        "version_major": 2,
        "version_minor": 0
       },
@@ -104,7 +104,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4349a0070534409cb5dc29f07e7a26df",
+       "model_id": "fb2938253dd645f79c8bf7af44a567d5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -118,7 +118,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20316af1141a4bbb838486f1b9a95212",
+       "model_id": "b255619bae0545508b199b8b45bf52e5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -132,7 +132,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4fd09bba0c5e4ffb993ac96f89215a1e",
+       "model_id": "10f53be39c3c4a0a9b0767208210fb7f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -146,7 +146,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e5047798cd6146e7b8db0af645bee430",
+       "model_id": "abdc84fa6431408c96c86f6f251849fe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -186,11 +186,16 @@
    "source": [
     "def encodec_compress(sample):\n",
     "    with torch.no_grad():\n",
-    "        x, fs = torchaudio.load(sample['audio_mix']['bytes'])\n",
+    "        x, fs = torchaudio.load(sample['audio_mix']['bytes'],normalize=False)\n",
+    "        x = x.to(torch.float)\n",
+    "        x = x - x.mean()\n",
+    "        max_abs = x.abs().max()\n",
+    "        x = x / (max_abs + 1e-8)\n",
+    "        x = x/2\n",
     "        L = x.shape[-1]\n",
     "    \n",
     "        t0 = time.time()\n",
-    "        x_pre = torchaudio.transforms.Resample(fs,processor.sampling_rate)(x)\n",
+    "        x_pre = torchaudio.transforms.Resample(fs,processor.sampling_rate)(2*x)\n",
     "        x_pre = processor(raw_audio=x_pre, sampling_rate=processor.sampling_rate, return_tensors=\"pt\")\n",
     "        Y = codec.encode(\n",
     "            input_values = x_pre['input_values'].to(device),\n",
@@ -207,11 +212,12 @@
     "            padding_mask=x_pre['padding_mask']\n",
     "        )['audio_values']\n",
     "        x_hat = torchaudio.transforms.Resample(processor.sampling_rate,fs).to(device)(x_hat)\n",
-    "        x_hat = x_hat[0,:,:L].clamp(-1., 1.)\n",
+    "        x_hat = x_hat / 2\n",
+    "        x_hat = x_hat[0,:,:L].clamp(-0.5, 0.5)\n",
     "        decode_time = time.time() - t0\n",
     "    \n",
     "        bps = 10*Y['audio_codes'].numel()/(x.numel())\n",
-    "        PSNR = - 10*np.log10(torch.nn.functional.mse_loss(x,x_hat.to(\"cpu\")))\n",
+    "        PSNR = -10*np.log10(torch.nn.functional.mse_loss(x,x_hat.to(\"cpu\")))\n",
     "        SDR = spauq_eval(x,x_hat.to(\"cpu\"),fs=fs)\n",
     "        SSDR = SDR['SSR']\n",
     "        SRDR = SDR['SRR']\n",
@@ -239,7 +245,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5faf4f53525b423e8f7f46a40f0704fd",
+       "model_id": "c0f9f4ea028247a381e74d22a8b19131",
        "version_major": 2,
        "version_minor": 0
       },
@@ -277,11 +283,16 @@
    "source": [
     "def encodec_compress_cpu(sample):\n",
     "    with torch.no_grad():\n",
-    "        x, fs = torchaudio.load(sample['audio_mix']['bytes'])\n",
+    "        x, fs = torchaudio.load(sample['audio_mix']['bytes'],normalize=False)\n",
+    "        x = x.to(torch.float)\n",
+    "        x = x - x.mean()\n",
+    "        max_abs = x.abs().max()\n",
+    "        x = x / (max_abs + 1e-8)\n",
+    "        x = x/2\n",
     "        L = x.shape[-1]\n",
     "    \n",
     "        t0 = time.time()\n",
-    "        x_pre = torchaudio.transforms.Resample(fs,processor.sampling_rate)(x)\n",
+    "        x_pre = torchaudio.transforms.Resample(fs,processor.sampling_rate)(2*x)\n",
     "        x_pre = processor(raw_audio=x_pre, sampling_rate=processor.sampling_rate, return_tensors=\"pt\")\n",
     "        Y = codec.encode(\n",
     "            input_values = x_pre['input_values'].to(device),\n",
@@ -298,7 +309,8 @@
     "            padding_mask=x_pre['padding_mask']\n",
     "        )['audio_values']\n",
     "        x_hat = torchaudio.transforms.Resample(processor.sampling_rate,fs).to(device)(x_hat)\n",
-    "        x_hat = x_hat[0,:,:L].clamp(-1., 1.)\n",
+    "        x_hat = x_hat / 2\n",
+    "        x_hat = x_hat[0,:,:L].clamp(-0.5, 0.5)\n",
     "        decode_time = time.time() - t0\n",
     "\n",
     "    return {\n",
@@ -316,7 +328,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "324b6300b6554e54910ac9f57105ebe6",
+       "model_id": "31725df8fe63421cb3eaaa87a565add7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -367,15 +379,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "encode_time: 0.3936007168456798\n",
-      "decode_time: 0.33530476803088005\n",
+      "encode_time: 0.3939989122725625\n",
+      "decode_time: 0.33626718284519574\n",
       "bps: 0.14019012451171875\n",
-      "PSNR: 27.119810497487773\n",
-      "SSDR: 22.695121088854346\n",
-      "SRDR: 6.675309606676834\n",
-      "CDPAM: 1.5211113069921241e-05\n",
-      "cpu_encode_time: 1.5750568841249888\n",
-      "cpu_decode_time: 1.4213164589787257\n"
+      "PSNR: 31.95164082796519\n",
+      "SSDR: 22.69493529722898\n",
+      "SRDR: 6.691856596921452\n",
+      "CDPAM: 2.065623472935146e-05\n",
+      "cpu_encode_time: 1.5419972561697923\n",
+      "cpu_decode_time: 1.4067453200580509\n"
      ]
     }
    ],
