--- a/train_audio/vss_samples_eval.ipynb
+++ b/train_audio/vss_samples_eval.ipynb
@@ -103,12 +103,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "b4b14a6a-0d51-4c90-ac53-b9c395cdfd79",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def eval_vss(sample)\n",
+    "def eval_vss(sample):\n",
     "    with torch.no_grad():\n",
     "        sample = valid_dataset[200]\n",
     "        xb, fs = torchaudio.load(sample['audio_mix']['bytes'])\n",
@@ -129,7 +129,7 @@
     "    \n",
     "        v = rearrange(v, 'B C L -> C (B L)')/2\n",
     "        v_hat = rearrange(v_hat, 'B C L -> C (B L)')\n",
-    "        v_hat = (v.std()/v_hat.std())*v_hat\n",
+    "        # v_hat = (v.std()/v_hat.std())*v_hat\n",
     "        \n",
     "        PSNR = -10*np.log10(torch.nn.functional.mse_loss(v,v_hat).item())\n",
     "        SDR = spauq_eval(v.cpu(),v_hat.cpu(),fs=fs)\n",
@@ -147,26 +147,337 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "c081cab6-3376-4646-857f-050a95c7a688",
+   "execution_count": 9,
+   "id": "fab28cd9-bdc8-4d5b-8da5-98f40335fccf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5aa5c3e264fe4128854b4c5905d61b00",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/235 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "eval_results = valid_dataset.map(eval_vss)\n",
+    "eval_only = eval_results.remove_columns(['audio_mix', 'audio_vocal', 'path_mix'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9f0c1900-928b-46af-b4bb-a3c10d7689e5",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30.931370354441334\n",
-      "9.026605854252265\n",
-      "-0.1820868716099514\n",
-      "38.44693272147889\n"
+      "28.917826074630252\n",
+      "7.34165313190401\n",
+      "-0.18208525194840308\n",
+      "40.49529437939107\n"
      ]
     }
    ],
    "source": [
-    "print(PSNR)\n",
-    "print(SSDR)\n",
-    "print(SRDR)\n",
-    "print(-10*np.log10(cdpam))"
+    "# without normalization\n",
+    "print(np.median(eval_only['PSNR']))\n",
+    "print(np.median(eval_only['SSDR']))\n",
+    "print(np.median(eval_only['SRDR']))\n",
+    "print(np.median(-10*np.log10(eval_only['CDPAM'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "647a998e-041b-4be1-8cbb-1c9cefad4f0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28.917826074630245\n",
+      "7.34165313190401\n",
+      "-0.18208525194840314\n",
+      "40.49529437939107\n"
+     ]
+    }
+   ],
+   "source": [
+    "# without normalization\n",
+    "print(np.mean(eval_only['PSNR']))\n",
+    "print(np.mean(eval_only['SSDR']))\n",
+    "print(np.mean(eval_only['SRDR']))\n",
+    "print(np.mean(-10*np.log10(eval_only['CDPAM'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c081cab6-3376-4646-857f-050a95c7a688",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "92182fe1c0d3461b936c8df5d9ff43a2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Uploading the dataset shards:   0%|          | 0/8 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "029611c227a0417e8d0d8c0259737f41",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/30 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bf118abfc58b4d91a8392ac17e8f71f6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a4c97b2f013841dcaa4c1167cc7b2873",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/30 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a7583524c1d64a43a4392543cd75eded",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "844fa20a019a4c8280ea072eb6dbc39e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/30 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2d11ba447e344eefb32de678ca8b9477",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "258b0fcfeca34fa8bd5ace06174b426b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/29 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d997ef20bab74a019410617b1179070c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "110ef9f869c546f8bae7192ec11113f0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/29 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4f936f4661c64c8f99c1e96ea3a32394",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4e01323dcec343489616daf40b445de3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/29 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "61c5d4fa650542cba8c02c28f2472b78",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5b954e0ec89d4a11adea050abae328e1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/29 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3d4b73543e04402181cc2939a0f7f1b8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "90f2d8a38ba54c25ab67dcb53fa8fb32",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/29 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "67afdcd686ac45049a5b2f27e87d5166",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CommitInfo(commit_url='https://huggingface.co/datasets/danjacobellis/MUSDB_vss_samples_rr_18x/commit/a08bf0e688dbbd38e57954cffcf97bb758442ac0', commit_message='Upload dataset', commit_description='', oid='a08bf0e688dbbd38e57954cffcf97bb758442ac0', pr_url=None, pr_revision=None, pr_num=None)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_results.push_to_hub(\"danjacobellis/MUSDB_vss_samples_rr_18x\",split='validation')"
    ]
   }
  ],
