--- a/train_audio/vss_samples_eval.ipynb
+++ b/train_audio/vss_samples_eval.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget https://huggingface.co/danjacobellis/LCCL/resolve/main/vss_samples_rr_18x.pth"
+    "!wget https://huggingface.co/danjacobellis/LCCL/resolve/main/vss_samples_rr_4x.pth"
    ]
   },
   {
@@ -53,7 +53,7 @@
     {
      "data": {
       "text/plain": [
-       "6.7132"
+       "6.8672"
       ]
      },
      "execution_count": 2,
@@ -66,7 +66,7 @@
     "\n",
     "cdpam_loss = cdpam.CDPAM()\n",
     "\n",
-    "checkpoint = torch.load(\"vss_samples_rr_18x.pth\",map_location=\"cpu\",weights_only=False)\n",
+    "checkpoint = torch.load(\"vss_samples_rr_4x.pth\",map_location=\"cpu\",weights_only=False)\n",
     "config = checkpoint['config']\n",
     "model = IsotropicOobleckAutoencoder(\n",
     "    channels=config.channels,\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "b4b14a6a-0d51-4c90-ac53-b9c395cdfd79",
    "metadata": {},
    "outputs": [],
@@ -147,14 +147,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "fab28cd9-bdc8-4d5b-8da5-98f40335fccf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5aa5c3e264fe4128854b4c5905d61b00",
+       "model_id": "8130eb9f6ea04836a73bd8b5777702e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -164,6 +164,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dgj335/.local/lib/python3.10/site-packages/spauq/core/preprocessing.py:325: UserWarning: No forgive_mode specified, defaulting to `none`\n",
+      "  warnings.warn(\n"
+     ]
     }
    ],
    "source": [
@@ -173,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "9f0c1900-928b-46af-b4bb-a3c10d7689e5",
    "metadata": {},
    "outputs": [
@@ -181,10 +189,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "28.917826074630252\n",
-      "7.34165313190401\n",
-      "-0.18208525194840308\n",
-      "40.49529437939107\n"
+      "28.752433169103618\n",
+      "6.909935312363146\n",
+      "0.6237106928493873\n",
+      "39.87194565982493\n"
      ]
     }
    ],
@@ -198,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "647a998e-041b-4be1-8cbb-1c9cefad4f0a",
    "metadata": {},
    "outputs": [
@@ -206,10 +214,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "28.917826074630245\n",
-      "7.34165313190401\n",
-      "-0.18208525194840314\n",
-      "40.49529437939107\n"
+      "28.752433169103615\n",
+      "6.909935312363146\n",
+      "0.6237106928493873\n",
+      "39.87194565982492\n"
      ]
     }
    ],
@@ -223,14 +231,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "c081cab6-3376-4646-857f-050a95c7a688",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92182fe1c0d3461b936c8df5d9ff43a2",
+       "model_id": "0b691bc5617940ba85312a0c51eb7404",
        "version_major": 2,
        "version_minor": 0
       },
@@ -244,7 +252,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "029611c227a0417e8d0d8c0259737f41",
+       "model_id": "dd980acbe39f4fd5abb754009acc9f26",
        "version_major": 2,
        "version_minor": 0
       },
@@ -258,7 +266,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf118abfc58b4d91a8392ac17e8f71f6",
+       "model_id": "fb44e2eda0614a619f2a41f2b00f8f9f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -272,7 +280,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4c97b2f013841dcaa4c1167cc7b2873",
+       "model_id": "c23ac5922dcb4670861bd8175df630da",
        "version_major": 2,
        "version_minor": 0
       },
@@ -286,7 +294,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7583524c1d64a43a4392543cd75eded",
+       "model_id": "4b58a2e4d232426fa3a3a60033243d61",
        "version_major": 2,
        "version_minor": 0
       },
@@ -300,7 +308,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "844fa20a019a4c8280ea072eb6dbc39e",
+       "model_id": "b87547917b8142bc92c61a6ac72d0c6c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -314,7 +322,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d11ba447e344eefb32de678ca8b9477",
+       "model_id": "0c741f1e249b40dab4db4b61c31405ed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -328,7 +336,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "258b0fcfeca34fa8bd5ace06174b426b",
+       "model_id": "6e0dac8169b74f3586a36d4ad1640413",
        "version_major": 2,
        "version_minor": 0
       },
@@ -342,7 +350,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d997ef20bab74a019410617b1179070c",
+       "model_id": "e9fe1da43b6049508fd2d50131127837",
        "version_major": 2,
        "version_minor": 0
       },
@@ -356,7 +364,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "110ef9f869c546f8bae7192ec11113f0",
+       "model_id": "ca44b32c2eef4aedbd9329db194c37d9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -370,7 +378,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f936f4661c64c8f99c1e96ea3a32394",
+       "model_id": "fa4c6c39e98c45e99d24551a5e2024bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -384,7 +392,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e01323dcec343489616daf40b445de3",
+       "model_id": "261ac04e269045bc8504d1bb29eacf1f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -398,7 +406,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "61c5d4fa650542cba8c02c28f2472b78",
+       "model_id": "7936bd038e5c496ea90032d3d79f691c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -412,7 +420,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b954e0ec89d4a11adea050abae328e1",
+       "model_id": "1f2096ba0feb4812b556b11d5a0e1153",
        "version_major": 2,
        "version_minor": 0
       },
@@ -426,7 +434,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d4b73543e04402181cc2939a0f7f1b8",
+       "model_id": "3fd1bda3c83e482bb51679778c047f87",
        "version_major": 2,
        "version_minor": 0
       },
@@ -440,7 +448,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90f2d8a38ba54c25ab67dcb53fa8fb32",
+       "model_id": "433c0d95bdff444fb46d2cda8e4e403e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -454,7 +462,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67afdcd686ac45049a5b2f27e87d5166",
+       "model_id": "3add8a0942e14ff7b54b7f1773ad7f78",
        "version_major": 2,
        "version_minor": 0
       },
@@ -468,16 +476,16 @@
     {
      "data": {
       "text/plain": [
-       "CommitInfo(commit_url='https://huggingface.co/datasets/danjacobellis/MUSDB_vss_samples_rr_18x/commit/a08bf0e688dbbd38e57954cffcf97bb758442ac0', commit_message='Upload dataset', commit_description='', oid='a08bf0e688dbbd38e57954cffcf97bb758442ac0', pr_url=None, pr_revision=None, pr_num=None)"
+       "CommitInfo(commit_url='https://huggingface.co/datasets/danjacobellis/MUSDB_vss_samples_rr_4x/commit/2bc1de17fcd9848128aaa02c8f71008b1720b08f', commit_message='Upload dataset', commit_description='', oid='2bc1de17fcd9848128aaa02c8f71008b1720b08f', pr_url=None, pr_revision=None, pr_num=None)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eval_results.push_to_hub(\"danjacobellis/MUSDB_vss_samples_rr_18x\",split='validation')"
+    "eval_results.push_to_hub(\"danjacobellis/MUSDB_vss_samples_rr_4x\",split='validation')"
    ]
   }
  ],
