left off divide by two when reverting normalization

--- a/train_audio/vss_samples_eval.ipynb
+++ b/train_audio/vss_samples_eval.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget https://huggingface.co/danjacobellis/LCCL/resolve/main/vss_samples_rr_4x.pth"
+    "!wget https://huggingface.co/danjacobellis/LCCL/resolve/main/vss_samples_rr_18x.pth"
    ]
   },
   {
@@ -53,7 +53,7 @@
     {
      "data": {
       "text/plain": [
-       "6.8672"
+       "6.7132"
       ]
      },
      "execution_count": 2,
@@ -66,7 +66,7 @@
     "\n",
     "cdpam_loss = cdpam.CDPAM()\n",
     "\n",
-    "checkpoint = torch.load(\"vss_samples_rr_4x.pth\",map_location=\"cpu\",weights_only=False)\n",
+    "checkpoint = torch.load(\"vss_samples_rr_18x.pth\",map_location=\"cpu\",weights_only=False)\n",
     "config = checkpoint['config']\n",
     "model = IsotropicOobleckAutoencoder(\n",
     "    channels=config.channels,\n",
@@ -128,9 +128,8 @@
     "        v_hat = resample_up(pred)\n",
     "    \n",
     "        v = rearrange(v, 'B C L -> C (B L)')/2\n",
-    "        v_hat = rearrange(v_hat, 'B C L -> C (B L)')\n",
-    "        # v_hat = (v.std()/v_hat.std())*v_hat\n",
-    "        \n",
+    "        v_hat = rearrange(v_hat, 'B C L -> C (B L)')/2\n",
+    "\n",
     "        PSNR = -10*np.log10(torch.nn.functional.mse_loss(v,v_hat).item())\n",
     "        SDR = spauq_eval(v.cpu(),v_hat.cpu(),fs=fs)\n",
     "        SSDR = SDR['SSR']\n",
@@ -154,7 +153,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8130eb9f6ea04836a73bd8b5777702e6",
+       "model_id": "d2ef60b8ba4546138294190a21120b49",
        "version_major": 2,
        "version_minor": 0
       },
@@ -182,22 +181,21 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9f0c1900-928b-46af-b4bb-a3c10d7689e5",
+   "id": "db5193d1-2206-4aae-86cc-c29baff98573",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "28.752433169103618\n",
-      "6.909935312363146\n",
-      "0.6237106928493873\n",
-      "39.87194565982493\n"
+      "31.594260337010816\n",
+      "5.4661390052668875\n",
+      "-0.18208525194840308\n",
+      "36.60614384261533\n"
      ]
     }
    ],
    "source": [
-    "# without normalization\n",
     "print(np.median(eval_only['PSNR']))\n",
     "print(np.median(eval_only['SSDR']))\n",
     "print(np.median(eval_only['SRDR']))\n",
@@ -207,22 +205,21 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "647a998e-041b-4be1-8cbb-1c9cefad4f0a",
+   "id": "2e686f38-bed4-4454-b031-0a73e0aa1353",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "28.752433169103615\n",
-      "6.909935312363146\n",
-      "0.6237106928493873\n",
-      "39.87194565982492\n"
+      "31.59426033701082\n",
+      "5.4661390052668875\n",
+      "-0.18208525194840314\n",
+      "36.606143842615325\n"
      ]
     }
    ],
    "source": [
-    "# without normalization\n",
     "print(np.mean(eval_only['PSNR']))\n",
     "print(np.mean(eval_only['SSDR']))\n",
     "print(np.mean(eval_only['SRDR']))\n",
@@ -238,12 +235,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b691bc5617940ba85312a0c51eb7404",
+       "model_id": "f78293d6db4f4532b71a99e184e4c577",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Uploading the dataset shards:   0%|          | 0/8 [00:00<?, ?it/s]"
+       "Uploading the dataset shards:   0%|          | 0/1 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -252,217 +249,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd980acbe39f4fd5abb754009acc9f26",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/30 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb44e2eda0614a619f2a41f2b00f8f9f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c23ac5922dcb4670861bd8175df630da",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/30 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b58a2e4d232426fa3a3a60033243d61",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b87547917b8142bc92c61a6ac72d0c6c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/30 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c741f1e249b40dab4db4b61c31405ed",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e0dac8169b74f3586a36d4ad1640413",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/29 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9fe1da43b6049508fd2d50131127837",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca44b32c2eef4aedbd9329db194c37d9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/29 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fa4c6c39e98c45e99d24551a5e2024bb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "261ac04e269045bc8504d1bb29eacf1f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/29 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7936bd038e5c496ea90032d3d79f691c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f2096ba0feb4812b556b11d5a0e1153",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/29 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3fd1bda3c83e482bb51679778c047f87",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "433c0d95bdff444fb46d2cda8e4e403e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/29 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3add8a0942e14ff7b54b7f1773ad7f78",
+       "model_id": "6379972614f94e1abeb7bb334380f33d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -476,7 +263,7 @@
     {
      "data": {
       "text/plain": [
-       "CommitInfo(commit_url='https://huggingface.co/datasets/danjacobellis/MUSDB_vss_samples_rr_4x/commit/2bc1de17fcd9848128aaa02c8f71008b1720b08f', commit_message='Upload dataset', commit_description='', oid='2bc1de17fcd9848128aaa02c8f71008b1720b08f', pr_url=None, pr_revision=None, pr_num=None)"
+       "CommitInfo(commit_url='https://huggingface.co/datasets/danjacobellis/MUSDB_vss_samples_rr_18x/commit/6b381d1d062457c68a7f61e62b83b09a638771f4', commit_message='Upload dataset', commit_description='', oid='6b381d1d062457c68a7f61e62b83b09a638771f4', pr_url=None, pr_revision=None, pr_num=None)"
       ]
      },
      "execution_count": 8,
@@ -485,7 +272,7 @@
     }
    ],
    "source": [
-    "eval_results.push_to_hub(\"danjacobellis/MUSDB_vss_samples_rr_4x\",split='validation')"
+    "eval_only.push_to_hub(\"danjacobellis/MUSDB_vss_samples_rr_18x\",split='validation')"
    ]
   }
  ],
