--- a/train_audio/vss_walloc_pf_eval.ipynb
+++ b/train_audio/vss_walloc_pf_eval.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget https://hf.co/danjacobellis/walloc/resolve/main/Stereo_Li_108c_test2.pth"
+    "!wget https://hf.co/danjacobellis/walloc/resolve/main/Stereo_Li_27c_test2.pth"
    ]
   },
   {
@@ -79,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "6.8364"
+       "6.71166"
       ]
      },
      "execution_count": 3,
@@ -92,7 +92,7 @@
     "\n",
     "cdpam_loss = cdpam.CDPAM()\n",
     "\n",
-    "codec_checkpoint = torch.load(\"Stereo_Li_108c_test2.pth\",map_location=\"cpu\",weights_only=False)\n",
+    "codec_checkpoint = torch.load(\"Stereo_Li_27c_test2.pth\",map_location=\"cpu\",weights_only=False)\n",
     "codec_config = codec_checkpoint['config']\n",
     "codec = walloc.Codec1D(\n",
     "    channels = codec_config.channels,\n",
@@ -107,7 +107,7 @@
     "codec.load_state_dict(codec_checkpoint['model_state_dict'])\n",
     "codec.eval();\n",
     "\n",
-    "checkpoint = torch.load(\"vss_walloc_5x.pth\",map_location=\"cpu\",weights_only=False)\n",
+    "checkpoint = torch.load(\"vss_walloc_20x.pth\",map_location=\"cpu\",weights_only=False)\n",
     "config = checkpoint['config']\n",
     "model = IsotropicOobleckAutoencoder(\n",
     "    channels=codec_config.latent_dim,\n",
@@ -157,8 +157,7 @@
     "        v_hat = decompress(pred,codec)\n",
     "    \n",
     "        v = rearrange(v, 'B C L -> C (B L)')/2\n",
-    "        v_hat = rearrange(v_hat, 'B C L -> C (B L)')\n",
-    "        # v_hat = (v.std()/v_hat.std())*v_hat\n",
+    "        v_hat = rearrange(v_hat, 'B C L -> C (B L)')/2\n",
     "        \n",
     "        PSNR = -10*np.log10(torch.nn.functional.mse_loss(v,v_hat).item())\n",
     "        SDR = spauq_eval(v.cpu(),v_hat.cpu(),fs=fs)\n",
@@ -183,7 +182,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36747ef2dbaf4ba7901397be696167d1",
+       "model_id": "4b1fd95c8a8b4e548d1a1751954f51fc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -210,23 +209,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "93a25bec-0fde-40e2-a012-e7990937730b",
+   "execution_count": 9,
+   "id": "a707f8e4-97de-4852-b9e4-c525bbceb687",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30.931876608086235\n",
-      "5.509678161092204\n",
-      "-2.505202985177014\n",
-      "37.200356010491305\n"
+      "33.835722294139515\n",
+      "4.08611056522931\n",
+      "-2.4720733922734865\n",
+      "35.622758388001294\n"
      ]
     }
    ],
    "source": [
-    "# without normalization\n",
     "print(np.median(eval_only['PSNR']))\n",
     "print(np.median(eval_only['SSDR']))\n",
     "print(np.median(eval_only['SRDR']))\n",
@@ -235,23 +233,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "dea02fe7-65be-4f5a-b96b-03a1a02a18b0",
+   "execution_count": 10,
+   "id": "71a809a7-fd4b-4f39-9f55-c055d81e0b44",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "31.365247923290156\n",
-      "5.510782213955982\n",
-      "-15.730691757597905\n",
-      "37.522896901560706\n"
+      "34.231653846194114\n",
+      "4.26564249153327\n",
+      "-16.355997063462834\n",
+      "36.09206237397685\n"
      ]
     }
    ],
    "source": [
-    "# without normalization\n",
     "print(np.mean(eval_only['PSNR']))\n",
     "print(np.mean(eval_only['SSDR']))\n",
     "print(np.mean(eval_only['SRDR']))\n",
@@ -260,19 +257,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "7686c077-ed51-4f5c-850c-235ce3c155c2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f39b17cb9b944efabb75efd96ed88c8",
+       "model_id": "521357facf1f4371bd5f53db6ccb05dc",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Uploading the dataset shards:   0%|          | 0/8 [00:00<?, ?it/s]"
+       "Uploading the dataset shards:   0%|          | 0/1 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -281,217 +278,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "529e80c065284805a4604bacd76fa547",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/30 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3ab815577c87499e941a5456c35ff504",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad61ce8f3a5c44d7afff8e0ff0c1bfa4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/30 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f1a347eecf5428ea5545af8c3b51de2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea1f9880b5784b5abb0177751ea38259",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/30 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9702a84e616c41bfa1622b593d24a664",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "063c74d9e932417fb01b9ff9470765c5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/29 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "328d7f9d4f59444cb9b03d34a9f31d99",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c0bc0726b284e21a0042957c35ede62",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/29 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "930a1616d46241e1b5f7137dc9e61381",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44242dc456e246538a49c78c56e3b021",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/29 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "538e0bd8b218445eaff75c019d4de201",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "adb5f996bab14181bd5e87984ff23d32",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/29 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e4bdf22174b4ebba156353360fb75ed",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "25129ca32e084492b1c459f443f17ee6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/29 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "290d7b3ef8ce4f09822aa40fac460237",
+       "model_id": "e80085dffded46929b41ba11d0441ee5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -505,16 +292,16 @@
     {
      "data": {
       "text/plain": [
-       "CommitInfo(commit_url='https://huggingface.co/datasets/danjacobellis/MUSDB_vss_walloc_5x/commit/782236b749f3f4ffb2e9bc1416770196c0ee2c77', commit_message='Upload dataset', commit_description='', oid='782236b749f3f4ffb2e9bc1416770196c0ee2c77', pr_url=None, pr_revision=None, pr_num=None)"
+       "CommitInfo(commit_url='https://huggingface.co/datasets/danjacobellis/MUSDB_vss_walloc_20x/commit/450d3e76668c848ee34c4b8b5d940d060125292d', commit_message='Upload dataset', commit_description='', oid='450d3e76668c848ee34c4b8b5d940d060125292d', pr_url=None, pr_revision=None, pr_num=None)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eval_results.push_to_hub(\"danjacobellis/MUSDB_vss_walloc_5x\",split='validation')"
+    "eval_only.push_to_hub(\"danjacobellis/MUSDB_vss_walloc_20x\",split='validation')"
    ]
   }
  ],
