--- a/train_audio/vss_table.ipynb
+++ b/train_audio/vss_table.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "22b762c8-d04b-435e-a46b-1baf96a47b1e",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
        "['Name', 'Dimensionality Reduction', 'PSNR', 'SSDR', 'SRDR', 'CDPAM']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,19 +77,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "17273f0d-a1e7-42f4-b395-89ce55bce35f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "| Name           |   Dimensionality Reduction |    PSNR |   SSDR |     SRDR |   CDPAM |\n",
-       "|:---------------|---------------------------:|--------:|-------:|---------:|--------:|\n",
-       "| Rate Reduction |                     4      | 28.7524 | 6.9099 |   0.6237 | 39.8719 |\n",
-       "| WalloC         |                     4.7407 | 31.3652 | 5.5108 | -15.7307 | 37.2004 |\n",
-       "| Rate Reduction |                    18      | 28.9178 | 7.3417 |  -0.1821 | 40.4953 |\n",
-       "| WalloC         |                    18.963  | 30.8789 | 5.4095 | -16.356  | 35.8961 |"
+       "| Name           |   Dimensionality Reduction |    PSNR |   SSDR |    SRDR |   CDPAM |\n",
+       "|:---------------|---------------------------:|--------:|-------:|--------:|--------:|\n",
+       "| Rate Reduction |                     4      | 31.9733 | 7.2344 |  0.6237 | 37.3354 |\n",
+       "| WalloC         |                     4.7407 | 33.7811 | 3.4055 | -2.5052 | 35.5056 |\n",
+       "| Rate Reduction |                    18      | 31.5943 | 5.4661 | -0.1821 | 36.6061 |\n",
+       "| WalloC         |                    18.963  | 33.8357 | 4.0861 | -2.4721 | 36.0921 |"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -106,9 +106,9 @@
     "    ds = load_dataset(method, split='validation')\n",
     "    row = [names[i_method], dimensionality_reduction[i_method]]\n",
     "    for metric in metrics[:-1]:\n",
-    "        mean = np.mean(ds[metric])\n",
+    "        mean = np.median(ds[metric])\n",
     "        row.append(mean)\n",
-    "    CDPAM_dB = np.median(-10*np.log10(ds['CDPAM']))\n",
+    "    CDPAM_dB = np.mean(-10*np.log10(ds['CDPAM']))\n",
     "    row.append(CDPAM_dB)\n",
     "    data_rows.append(row)\n",
     "\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "2f066e91-060f-40db-87ba-369dc48183fe",
    "metadata": {},
    "outputs": [
@@ -133,10 +133,10 @@
       "\\toprule\n",
       " & Name & Dimensionality Reduction & PSNR & SSDR & SRDR & CDPAM \\\\\n",
       "\\midrule\n",
-      "\\textbf{0} & Rate Reduction & 4 & 28.8 & 6.91 & 0.624 & 39.9 \\\\\n",
-      "\\textbf{1} & WalloC & 4.74 & 31.4 & 5.51 & -15.7 & 37.2 \\\\\n",
-      "\\textbf{2} & Rate Reduction & 18 & 28.9 & 7.34 & -0.182 & 40.5 \\\\\n",
-      "\\textbf{3} & WalloC & 19 & 30.9 & 5.41 & -16.4 & 35.9 \\\\\n",
+      "\\textbf{0} & Rate Reduction & 4 & 32 & 7.23 & 0.624 & 37.3 \\\\\n",
+      "\\textbf{1} & WalloC & 4.74 & 33.8 & 3.41 & -2.51 & 35.5 \\\\\n",
+      "\\textbf{2} & Rate Reduction & 18 & 31.6 & 5.47 & -0.182 & 36.6 \\\\\n",
+      "\\textbf{3} & WalloC & 19 & 33.8 & 4.09 & -2.47 & 36.1 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
