add equivalent fs

--- a/train_audio/vss_table.ipynb
+++ b/train_audio/vss_table.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "5ac7b900-5c22-40c8-bc71-f08f366acdae",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
     "    \"danjacobellis/MUSDB_vss_walloc_20x\",\n",
     "]\n",
     "\n",
-    "dimensionality_reduction = [\n",
+    "dimensiona_reduction = [\n",
     "    4,\n",
     "    512/108,\n",
     "    18,\n",
@@ -35,38 +35,39 @@
     "]\n",
     "\n",
     "names = [\n",
-    "    'Rate Reduction',\n",
-    "    'WalloC',\n",
-    "    'Rate Reduction',\n",
-    "    'WalloC',\n",
+    "    'Downsample',\n",
+    "    'WalloC 5x',\n",
+    "    'Downsample',\n",
+    "    'WalloC 20x',\n",
     "]\n",
     "\n",
     "metrics = [\n",
     "    'PSNR',\n",
-    "    'SSDR',\n",
-    "    'SRDR',\n",
+    "    # 'SSDR',\n",
+    "    # 'SRDR',\n",
     "    'CDPAM',\n",
     "]\n",
     "\n",
     "columns = [\n",
     "    'Name',\n",
     "    'Dimensionality Reduction',\n",
+    "    'Equivalent Fs',\n",
     "] + metrics "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "22b762c8-d04b-435e-a46b-1baf96a47b1e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Name', 'Dimensionality Reduction', 'PSNR', 'SSDR', 'SRDR', 'CDPAM']"
+       "['Name', 'Dimensionality Reduction', 'Equivalent Fs', 'PSNR', 'CDPAM']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,19 +78,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "17273f0d-a1e7-42f4-b395-89ce55bce35f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "| Name           |   Dimensionality Reduction |    PSNR |   SSDR |     SRDR |   CDPAM |\n",
-       "|:---------------|---------------------------:|--------:|-------:|---------:|--------:|\n",
-       "| Rate Reduction |                     4      | 31.9733 | 7.2344 |   0.6237 | 37.3354 |\n",
-       "| WalloC         |                     4.7407 | 34.2437 | 3.8444 | -15.7307 | 35.5056 |\n",
-       "| Rate Reduction |                    18      | 31.5943 | 5.4661 |  -0.1821 | 36.6061 |\n",
-       "| WalloC         |                    18.963  | 34.2317 | 4.2656 | -16.356  | 36.0921 |"
+       "| Name       |   Dimensionality Reduction |   Equivalent Fs |    PSNR |   CDPAM |\n",
+       "|:-----------|---------------------------:|----------------:|--------:|--------:|\n",
+       "| Downsample |                     4      |        11025    | 31.9733 | 37.3354 |\n",
+       "| WalloC 5x  |                     4.7407 |         9302.34 | 34.2437 | 35.5056 |\n",
+       "| Downsample |                    18      |         2450    | 31.5943 | 36.6061 |\n",
+       "| WalloC 20x |                    18.963  |         2325.59 | 34.2317 | 36.0921 |"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -104,7 +105,8 @@
     "\n",
     "for i_method, method in enumerate(methods):\n",
     "    ds = load_dataset(method, split='validation')\n",
-    "    row = [names[i_method], dimensionality_reduction[i_method]]\n",
+    "    dr = dimensiona_reduction[i_method]\n",
+    "    row = [names[i_method], dr, 44100/dr]\n",
     "    for metric in metrics[:-1]:\n",
     "        mean = np.mean(ds[metric])\n",
     "        row.append(mean)\n",
@@ -121,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "2f066e91-060f-40db-87ba-369dc48183fe",
    "metadata": {},
    "outputs": [
@@ -129,14 +131,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\\begin{tabular}{lrrrrrrrr}\n",
+      "\\begin{tabular}{lrrrr}\n",
       "\\toprule\n",
-      " & Name & Dimensionality Reduction & PSNR & SSDR & SRDR & CDPAM \\\\\n",
+      " & Name & Dimensionality Reduction & Equivalent Fs & PSNR & CDPAM \\\\\n",
       "\\midrule\n",
-      "\\textbf{0} & Rate Reduction & 4 & 32 & 7.23 & 0.624 & 37.3 \\\\\n",
-      "\\textbf{1} & WalloC & 4.74 & 34.2 & 3.84 & -15.7 & 35.5 \\\\\n",
-      "\\textbf{2} & Rate Reduction & 18 & 31.6 & 5.47 & -0.182 & 36.6 \\\\\n",
-      "\\textbf{3} & WalloC & 19 & 34.2 & 4.27 & -16.4 & 36.1 \\\\\n",
+      "\\textbf{0} & Downsample & 4 & 1.1e+04 & 32 & 37.3 \\\\\n",
+      "\\textbf{1} & WalloC 5x & 4.74 & 9.3e+03 & 34.2 & 35.5 \\\\\n",
+      "\\textbf{2} & Downsample & 18 & 2.45e+03 & 31.6 & 36.6 \\\\\n",
+      "\\textbf{3} & WalloC 20x & 19 & 2.33e+03 & 34.2 & 36.1 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
