--- a/train_audio/vss_samples_eval.ipynb
+++ b/train_audio/vss_samples_eval.ipynb
@@ -7,12 +7,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget https://huggingface.co/danjacobellis/LCCL/resolve/main/vss_samples_rr_4x.pth"
+    "!wget https://huggingface.co/danjacobellis/LCCL/resolve/main/vss_samples_baseline_e10.pth"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b575600f-e76e-4098-8b05-86bbee490c63",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c7f258bd-068c-455b-b854-631de4a5e3ff",
    "metadata": {},
    "outputs": [
@@ -53,10 +53,10 @@
     {
      "data": {
       "text/plain": [
-       "6.8672"
+       "7.45856"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
     "\n",
     "cdpam_loss = cdpam.CDPAM()\n",
     "\n",
-    "checkpoint = torch.load(\"vss_samples_rr_4x.pth\",map_location=\"cpu\",weights_only=False)\n",
+    "checkpoint = torch.load(\"vss_samples_baseline_e10.pth\",map_location=\"cpu\",weights_only=False)\n",
     "config = checkpoint['config']\n",
     "model = IsotropicOobleckAutoencoder(\n",
     "    channels=config.channels,\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "caca760e-9293-4509-b159-e3fc78268bc6",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b4b14a6a-0d51-4c90-ac53-b9c395cdfd79",
    "metadata": {},
    "outputs": [],
@@ -146,14 +146,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "fab28cd9-bdc8-4d5b-8da5-98f40335fccf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3bea802fa10a40e79a9f68b62f5dfa58",
+       "model_id": "c48921beca064a2bbceb5e2fa94b0323",
        "version_major": 2,
        "version_minor": 0
       },
@@ -180,30 +180,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "db5193d1-2206-4aae-86cc-c29baff98573",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "31.973260071635007\n",
-      "7.234427501939179\n",
-      "0.6237106928493873\n",
-      "37.335405759384194\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(np.median(eval_only['PSNR']))\n",
-    "print(np.median(eval_only['SSDR']))\n",
-    "print(np.median(eval_only['SRDR']))\n",
-    "print(np.median(-10*np.log10(eval_only['CDPAM'])))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "id": "2e686f38-bed4-4454-b031-0a73e0aa1353",
    "metadata": {},
@@ -212,10 +188,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "31.973260071635014\n",
-      "7.234427501939179\n",
-      "0.6237106928493873\n",
-      "37.335405759384194\n"
+      "31.397256376295317\n",
+      "5.290369685190391\n",
+      "-0.512712064131561\n",
+      "36.79457700600062\n"
      ]
     }
    ],
@@ -235,7 +211,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "400c9f12e7f0459faa111e080627990e",
+       "model_id": "173038b8f55747b799950a528c3df029",
        "version_major": 2,
        "version_minor": 0
       },
@@ -249,7 +225,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c39a8ddcf24442bda4b445f3f8f7e32f",
+       "model_id": "824ba0dc723946fea5f4a0b3557cd4bd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -263,7 +239,7 @@
     {
      "data": {
       "text/plain": [
-       "CommitInfo(commit_url='https://huggingface.co/datasets/danjacobellis/MUSDB_vss_samples_rr_4x/commit/383d75d7caedfc02523d35cd535abc3f0750e16f', commit_message='Upload dataset', commit_description='', oid='383d75d7caedfc02523d35cd535abc3f0750e16f', pr_url=None, pr_revision=None, pr_num=None)"
+       "CommitInfo(commit_url='https://huggingface.co/datasets/danjacobellis/MUSDB_vss_samples_rr_baseline/commit/9d5d20804a1a900cd22e6dc03cd7350db9ff12a4', commit_message='Upload dataset', commit_description='', oid='9d5d20804a1a900cd22e6dc03cd7350db9ff12a4', pr_url=None, pr_revision=None, pr_num=None)"
       ]
      },
      "execution_count": 8,
@@ -272,7 +248,7 @@
     }
    ],
    "source": [
-    "eval_only.push_to_hub(\"danjacobellis/MUSDB_vss_samples_rr_4x\",split='validation')"
+    "eval_only.push_to_hub(\"danjacobellis/MUSDB_vss_samples_rr_baseline\",split='validation')"
    ]
   }
  ],
